--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "clean": "rimraf coverage build tmp",
     "build": "tsc -p tsconfig.release.json",
-    "start": "node ./build/app.js"
+    "start": "node ./build/app.js",
+    "dev": "nodemon --config nodemon.json src/app.ts",
+    "dev:debug": "nodemon --config nodemon.json --inspect-brk src/app.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/socket.io": "^2.1.13",
     "@types/ws": "^7.4.1",
+    "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
